compiler/tests-spec/testData/psi/templates/identifiers/stringTemplateElement.kt
fun f1() {
    konst x1 = "$<!ELEMENT!>"

    konst x2 = "..." + "...$<!ELEMENT!>..." + "..."

    var x3 = "$<!ELEMENT!>$<!ELEMENT!>$<!ELEMENT!>"
}
